--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+$primary-color: #3f51b5;
+$accent-color: #e91e63;   
+$background-color: #f5f5f5; 
+$text-color: #212121;   
+$white-color: #ffffff;
+
+
+body {
+  background-color: $background-color;
+  color: $text-color;
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+
