--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,3 @@
 <div class="app">
-
-  <app-periodic-table
-  [elements]="elements"
-  (editElement)="openEditDialog($event)"
-  ></app-periodic-table>
-  
+  <app-periodic-table></app-periodic-table>
 </div>
